2010-05-18  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	* configure.ac: Define "debug" for Erlang code if --enable-debug is
	set.

2010-05-11  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	* src/Makefile.am: Fix Emakefile generation by only selecting modules,
	eg. no headers.

	* Makefile.am: priv/ is treated before testsuite/.

2010-05-10  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	* configure.ac: Bash doesn't like an "if"-block with no instructions
	in the body: explicitly call the no-op instruction.
	Do not make testsuite/etest executable.

	* debian/rules: Remove hard-coded version. Do not specify CFLAGS in
	front of ./configure: first, it's useless for this application,
	second, it's a bad practice.

	* debian/changelog: Declare the new version.

2010-05-10  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	Version 0.1.0.

	This application is now modeled after the "bones" application.

	The most important change is that the "syslogger" module doesn't exist
	anymore. It has been replaced by a "syslogger_app" module. Therefore,
	to start this application, you should use
	"application:start(syslogger)." instead of the old syslogger:start/0.

	The second noticeable change is that default values moved from the
	"syslog" module to the syslogger.app file. The value themselves
	havent' changed.

2010-03-29  Christopher Faulet  <christopher@yakaz.com>

	* Version 0.0.3
	* src/syslog_wrapper.erl (get_loglevel): add function to retreive
	the loglevel.
	* debian/control, debian/rules, debian/copyright: some minor
	fixes.

2010-03-19  Christopher Faulet  <christopher@yakaz.com>

	* Makefile.am: Add debian files in the source distribution
	archive.

	* debian: add files to debianized syslogger.

	* version 0.0.2
	* src/syslog_wrapper.erl: With this new module, we can dynamically
	build modules to wrap the syslog module for a specific (and
	static) log_level.
	* src/error_logger_syslog.erl: This new module is an event handler